# BWOC-Framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  VERSION.md  VISION.md  VISION.th.md
.claude/: loop-roadmap.md  settings.json
.claude/hooks/: auto-version.sh  bilingual-reminder.sh
.claude/skills/check-bilingual/: SKILL.md
.claude/skills/check-naming/: SKILL.md
.claude/skills/check-neutrality/: SKILL.md
.claude/skills/incarnate/: SKILL.md
.claude/skills/task-log/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
Formula/: bwoc.rb
crates/bwoc-a2a/: Cargo.toml
crates/bwoc-a2a/src/: card.rs  client.rs  creds.rs  lib.rs  main.rs  push.rs  rpc.rs  serve.rs  ssrf.rs  tasks.rs  types.rs
crates/bwoc-agent/: Cargo.toml  README.md
crates/bwoc-agent/locales/en/: agent.ftl
crates/bwoc-agent/locales/th/: agent.ftl
crates/bwoc-agent/src/: i18n.rs  main.rs  task_watch.rs  trust.rs
crates/bwoc-cli/: Cargo.toml  README.md
crates/bwoc-cli/locales/en/: cli.ftl
crates/bwoc-cli/locales/th/: cli.ftl
crates/bwoc-cli/src/: a2a.rs  audit.rs  banner.rs  chat.rs  check.rs  completion.rs  council.rs  dashboard.rs  deep_memory_cmd.rs  doc_cmd.rs  doctor.rs  figma.rs  fleet.rs  gcloud.rs  git_worktree.rs  gws.rs  help.rs  i18n.rs  inbox.rs  init.rs  jira.rs  livecheck.rs  log.rs  main.rs  memory.rs  new.rs  okr.rs  peer.rs  ping.rs  plugin.rs  retire.rs  run.rs  sangha.rs  send.rs  sessions.rs  skill.rs  spawn.rs  start.rs  status.rs  stop.rs  (+7 more)
crates/bwoc-cli/tests/: audit_iso_20000_1.rs  audit_iso_27001.rs  audit_iso_9001.rs  smoke.rs
crates/bwoc-core/: Cargo.toml  README.md
crates/bwoc-core/src/: deep_memory.rs  doc_kind.rs  error.rs  identity.rs  lib.rs  lifecycle.rs  manifest.rs  routing.rs  team.rs  time.rs  workspace.rs
crates/bwoc-harness/: Cargo.toml
crates/bwoc-harness/src/: agent_loop.rs  budget.rs  checkpoint.rs  error.rs  lead.rs  lib.rs  main.rs  mcp.rs  model_select.rs  queue.rs  retrospective.rs  sandbox.rs  telemetry.rs  worker.rs
crates/bwoc-harness/src/eval/: mod.rs
crates/bwoc-harness/src/policy/: guardrails.rs  mod.rs  permission.rs
crates/bwoc-harness/src/provider/: client.rs  mod.rs  types.rs
crates/bwoc-harness/src/tools/: auth.rs  extra_tools.rs  impls.rs  mod.rs  registry.rs
crates/bwoc-signing/: Cargo.toml
crates/bwoc-signing/src/: lib.rs
docs/: _config.yml  en.md  index.md  th.md
docs/en/: ARCHITECTURE.en.md  FAQ.en.md  FLEET-GOVERNANCE.en.md  GLOSSARY.en.md  HARNESS.en.md  INCARNATION.en.md  NAMING.en.md  PLUGINS.en.md  RELEASING.en.md  ROADMAP.en.md  SIGNING.en.md  SKILLS.en.md  WORKSPACE.en.md
docs/th/: ARCHITECTURE.th.md  FAQ.th.md  FLEET-GOVERNANCE.th.md  GLOSSARY.th.md  HARNESS.th.md  INCARNATION.th.md  NAMING.th.md  PLUGINS.th.md  RELEASING.th.md  ROADMAP.th.md  SIGNING.th.md  SKILLS.th.md  WORKSPACE.th.md
examples/: README.md
examples/howto/: README.md  configure-backends.md  diagnose-and-fix.md  first-agent.md  workspace-layout.md
examples/showcases/: README.md
examples/usecases/: README.md
modules/: README.md
modules/agent-template/: AGENTS.md  CLAUDE.md  README.md  config.manifest.json  conventions.md  neutrality.md
modules/agent-template/.claude/: settings.json
modules/agent-template/docs/: README.bad.md  README.md  project-example.md  reference-example.md  task-log.example.jsonl
modules/agent-template/interconnect/: capabilities.md  messaging.md  messaging.th.md  routing.md  routing.th.md  sangha.md  sangha.th.md  trust.md  trust.th.md
modules/agent-template/memories/: README.md
modules/agent-template/mindsets/: SPEC.md
modules/agent-template/persona/: README.md
modules/agent-template/scripts/: check-agent-neutrality.sh  incarnate.sh
modules/agent-template/skills/: SPEC.md
modules/cli/: README.md
modules/plugin-template/: SPEC.md  manifest.toml
modules/plugins/: README.md
modules/plugins/audit-iso-20000-1/: SPEC.md  SPEC.th.md  audit.sh  criteria.toml  manifest.toml
modules/plugins/audit-iso-27001/: SPEC.md  SPEC.th.md  audit.sh  criteria.toml  manifest.toml
modules/plugins/audit-iso-29110/: SPEC.md  SPEC.th.md  audit.sh  criteria.toml  (+1 more)
modules/skill-template/: SPEC.md  manifest.toml
modules/skills/: README.md
notes/: 2026-05-22_bwoc-new-ux-and-framework-hygiene.md  2026-05-22_gap-analysis-remediation.md  2026-05-22_pages-and-release-pipeline.md  2026-05-22_phase-1-v20-foundation.md  2026-05-22_phase-2-thiti-surface.md  2026-05-22_tui-runtime-plan.md  2026-05-23_agent-to-agent-messaging.md  2026-05-23_antigravity-rename.md  2026-05-23_branching-standard-and-team-personas.md  2026-05-23_bwoc-2-0-release-and-homebrew.md  2026-05-23_chat-ghostty-launcher.md  2026-05-23_check-dual-mode-and-personalize.md  2026-05-23_ci-cross-platform-green.md  2026-05-23_dashboard-start-hotkey.md  2026-05-23_dashboard-stop-and-start-race-fix.md  2026-05-23_dashboard-team-visibility.md  2026-05-23_first-release-and-trust-spec.md  2026-05-23_gitbook-pages-and-readme-banner.md  2026-05-23_harness-p1-p2-p5.md  2026-05-23_hitl-cleanup-pass.md  2026-05-23_inbox-wakeup-and-auto-reply.md  2026-05-23_incarnate-agent-codx.md  2026-05-23_ollama-agentic-harness-design.md  2026-05-23_phase-4-fleet-governance.md  2026-05-23_phase3-remaining-sequencing.md  2026-05-23_sangha-phase-b-daemon-task-watch.md  2026-05-23_sangha-phase-c-plan-approval.md  2026-05-23_sangha-task-hooks.md  2026-05-23_sangha-v1-phase-a.md  2026-05-23_task-002-routing-track-a.md  2026-05-23_time-cve-triage.md  2026-05-23_track-b-worktree-lifecycle.md  2026-05-23_trunk-based-branching-standard.md  2026-05-23_trust-step-4.md  2026-05-23_version-2-0-0-and-auto-bump-levels.md  2026-05-23_whats-new-surface.md  2026-05-24_doc-kinds-ext-gh17.md  2026-05-24_doc-kinds-mechanism.md  2026-05-25_a2a-interop-design.md  2026-05-25_harness-v2-planning.md  (+56 more)
scripts/: bump-formula.sh  bump-version.sh  install.sh  queue-bump.sh
(+96 files in other folders)
