[workspace]
resolver = "3"
members = [
    "crates/bwoc-core",
    "crates/bwoc-cli",
    "crates/bwoc-agent",
]

[workspace.package]
version = "0.1.420"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bmt-bwol-ops/bwoc-framwork"

[workspace.dependencies]
bwoc-core = { path = "crates/bwoc-core" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ratatui = "0.30"
crossterm = "0.29"
ctrlc = "3"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
fluent-bundle = "0.16"
unic-langid = "0.9"
include_dir = "0.7"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
