[workspace]
resolver = "3"
members = [
    "crates/bwoc-core",
    "crates/bwoc-signing",
    "crates/bwoc-a2a",
    "crates/bwoc-cli",
    "crates/bwoc-agent",
    "crates/bwoc-harness",
]

[workspace.package]
version = "2.8.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bmt-bwol-ops/bwoc-framwork"

[workspace.dependencies]
bwoc-core = { path = "crates/bwoc-core" }
bwoc-signing = { path = "crates/bwoc-signing" }
bwoc-a2a = { path = "crates/bwoc-a2a" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ratatui = "0.30"
crossterm = "0.29"
ctrlc = "3"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
fluent-bundle = "0.16"
unic-langid = "0.9"
include_dir = "0.7"
thiserror = "2"
sha2 = "0.10"
# A2A HTTP transport (#48 P1-serve). Isolated to bwoc-a2a — NEVER bwoc-core
# (dep-quarantine HARD RULE). tokio uses a current-thread runtime created inside
# bwoc-a2a so the CLI stays synchronous.
axum = "0.8"
tokio = { version = "1", features = ["rt", "net", "time", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
