[package]
name = "bwoc-a2a"
description = "A2A (Agent2Agent) protocol interop for BWOC — Agent Card, JSON-RPC message/task handlers, and (later) an axum HTTP listener. Pinned to A2A spec v1.0.0. HTTP/network deps live here, never in bwoc-core (#48)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Shared BWOC types: manifest → Agent Card, team (Saṅgha) → A2A tasks.
bwoc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# HTTP transport (P1-serve). The protocol core (types/card/rpc) stays
# transport-agnostic and unit-testable without these; only `serve` uses them.
# The outbound client (reqwest) lands in P4. These live here and are linked
# ONLY by the `bwoc-a2a` binary — `bwoc-cli` execs that binary as a subprocess
# (like `bwoc-harness`) so tokio/hyper never enter the CLI's dependency tree
# (the dep-quarantine invariant in `bwoc-cli/src/spawn.rs`).
axum = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
clap = { workspace = true }

# The serve listener runs in its own binary, exec'd by `bwoc a2a` in the CLI.
[[bin]]
name = "bwoc-a2a"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
# `oneshot` the axum Router in tests without binding a real socket.
tower = { version = "0.5", features = ["util"] }
