[package]
name = "bwoc-cli"
description = "The bwoc CLI — incarnate, check, spawn, and control BWOC agents. Native binary for macOS, Linux, and Windows. Localized output (TH, EN)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bwoc"
path = "src/main.rs"

[dependencies]
bwoc-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
libc = "0.2"
serde_json = { workspace = true }
fluent-bundle = { workspace = true }
unic-langid = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }
