[package]
name = "bwoc-core"
description = "Shared types for the BWOC framework — manifest, identity, lifecycle phases (uppāda · ṭhiti · vaya)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
