[package]
name = "bwoc-harness"
description = "BWOC self-hosted agentic harness — OpenAI-compatible provider, agentic loop, core tools, P3 task queue + telemetry + tool-auth."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bwoc-harness"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Feature flags
# ---------------------------------------------------------------------------
[features]
# Optional OpenTelemetry export.  The default build has ZERO OTEL deps.
# Enable with: cargo build --features otel
# Pulls the OTEL crate graph (heavy + network egress) ONLY under this feature —
# the dep-quarantine holds for the default build.
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dependencies]
# Lean shared types — bwoc-core carries only serde/toml/thiserror.
# This dep does NOT violate the dep-quarantine invariant.
bwoc-core = { path = "../bwoc-core" }

# OpenTelemetry — OPTIONAL, behind the `otel` feature only (heavy + network
# egress). Dep-quarantine: these never enter the default build.
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }

# Async runtime — required for streaming + concurrent tool execution + queue
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time"] }
# Cancellation token for the task queue (CancellationToken is in the default feature set)
tokio-util = "0.7"
# HTTP client for OpenAI-compat endpoint
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Futures utilities (stream combinators)
futures-util = "0.3"
# Byte manipulation for SSE parsing
bytes = "1"
# Async trait support
async-trait = "0.1"

# TOML config parsing for .bwoc/harness-policy.toml
toml = "0.8"

# OS keyring — scoped credential store for tool authentication.
# Heavy dep (platform integration): lives in bwoc-harness ONLY per dep-quarantine.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# ---------------------------------------------------------------------------
# Platform-specific dependencies
# ---------------------------------------------------------------------------
[target.'cfg(target_os = "linux")'.dependencies]
# Landlock LSM bindings for kernel-enforced filesystem access control.
# Allowed here: bwoc-harness is the dep-quarantine crate for heavy/platform deps.
landlock = "0.4"

[dev-dependencies]
# HTTP mock server for offline provider tests
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
